--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,23 @@
                     <artifactId>jaxws-rt</artifactId>
                     <version>2.3.6</version> <!-- Puedes ajustar la versión según la que esté disponible -->
                 </dependency>
-
+                 <dependency>
+                    <groupId>org.apache.axis</groupId>
+                    <artifactId>axis</artifactId>
+                    <version>1.4</version>
+                </dependency>
 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version> 
 		</dependency>
+                <dependency>
+                    <groupId>commons-discovery</groupId>
+                    <artifactId>commons-discovery</artifactId>
+                    <version>20040218.194635</version>
+                </dependency>
+
 		<dependency>
 			<groupId>com.toedter</groupId>
 			<artifactId>jcalendar</artifactId>
